# qrshare

./: .dir-locals.el  .rustfmt.toml  Cargo.toml  readme.md
qrshare-lib/: Cargo.toml
qrshare-lib/src/: config.rs  errors.rs  file.rs  hash.rs  lib.rs  macros.rs  qr.rs  utils.rs
src/: cli.rs  errors.rs  file.rs  main.rs  net.rs  qr.rs  route.rs  server.rs  services.rs  utils.rs
