[package]
name = "qrshare"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "qrshare-lib" ]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrshare-lib = { path = "qrshare-lib" }
clap = { version = "3.2.1", features = ["derive"] }
# http = "0.2.8"
hyper = { version = "0.14.19", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
tempfile = "3.3.0"
either = "1.6.1"
hex = "0.4.3"
sha2 = "0.10.2"
tokio-util = "0.7.3"
http = "0.2.8"
get_if_addrs = "0.5.3"
# qrcode = "0.12.0"
# image = "0.23"                  # required by qrencode "0.12.0"
# open = "3.0.1"
