[package]
name = "qrshare"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "qrshare-lib" ]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "qrshare-lib", package = "qrshare-lib" }

clap = { version = "3.2.17", features = ["derive"] }
# http = "0.2.8"
hyper = { version = "0.14.19", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
tempfile = "3.3.0"
either = "1.6.1"
hex = "0.4.3"
sha2 = "0.10.2"
tokio-util = "0.7.3"
http = "0.2.8"
get_if_addrs = "0.5.3"
actix-web = "4.1.0"
serde = { version = "1.0.144", features = ["derive"] }
build_html = "2.1.1"
log = "0.4.17"
actix-service = "2.0.2"
actix-http = "3.2.1"
simple_logger = "2.3.0"
futures = "0.3.23"
actix-files = "0.6.2"
qrcode = "0.12.0"
mime = "0.3.16"
