[package]
name = "qrshare-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.12.0"
image = "0.23"                  # required by qrencode "0.12.0"
open = "3.0.1"
http = "0.2.8"
tempfile = "3.3.0"
tokio = { version = "1.19.2", features = ["full"] }
get_if_addrs = "0.5.3"
hyper = { version = "0.14.19", features = ["full"] }
